--- a/WHEEL/submit.yml.erb
+++ b/WHEEL/submit.yml.erb
@@ -3,4 +3,4 @@ batch_connect:
   template: "basic"
 
 script:
-  <%= script("ood_wheel", custom_queue, gpus) %>
+  <%= script("ood_desktop", global_queue_x86, global_hours, global_gpus) %>
