--- a/Jupyter/submit.yml.erb
+++ b/Jupyter/submit.yml.erb
@@ -3,4 +3,4 @@ batch_connect:
   template: "basic"
 
 script:
-  <%= script("ood_jupyter", custom_queue, gpus) %>
+  <%= script("ood_desktop", global_queue, global_hours, global_gpus) %>
