--- a/VSCode/submit.yml.erb
+++ b/VSCode/submit.yml.erb
@@ -3,4 +3,4 @@ batch_connect:
   template: "basic"
 
 script:
-  <%= script("ood_desktop", global_queue, global_hours, global_gpus) %>
+  <%= script("ood_vscode", global_queue, global_hours, global_gpus, global_email) %>
