--- a/ParaView/template/script.sh.erb
+++ b/ParaView/template/script.sh.erb
@@ -1,5 +1,5 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce(is_vgl(context.global_queue, context.global_gpus)) %>
 
 # Select Paraview
 if [ "$(arch)" = "x86_64" ]; then
@@ -10,10 +10,10 @@ fi
 
 # Start Paraview
 <% if !context.global_input_file.to_s.empty? %>
-"$PARAVIEW_PATH" "<%= context.global_input_file %>" &
+${_VIRTUALGL} "$PARAVIEW_PATH" "<%= context.global_input_file %>" &
 <% else %>
-"$PARAVIEW_PATH" &
+${_VIRTUALGL} "$PARAVIEW_PATH" &
 <% end %>
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
