--- a/PyMOL/template/script.sh.erb
+++ b/PyMOL/template/script.sh.erb
@@ -1,12 +1,12 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce(is_vgl(context.global_queue, context.global_gpus)) %>
 
 # Start PyMOL
 <% if !context.global_input_file.to_s.empty? %>
-/opt/pymol/bin/pymol "<%= context.global_input_file %>" &
+${_VIRTUALGL} /opt/pymol/bin/pymol "<%= context.global_input_file %>" &
 <% else %>
-/opt/pymol/bin/pymol &
+${_VIRTUALGL} /opt/pymol/bin/pymol &
 <% end %>
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
