--- a/Smokeview/template/script.sh.erb
+++ b/Smokeview/template/script.sh.erb
@@ -1,8 +1,8 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce(is_vgl(context.global_queue_x86, context.global_gpus)) %>
 
 # Start Smokeview (input file must be required)
-/opt/smokeview/smokeview "<%= context.global_required_input_file %>" &
+${_VIRTUALGL} /opt/smokeview/smokeview "<%= context.global_required_input_file %>" &
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
