--- a/VESTA/template/script.sh.erb
+++ b/VESTA/template/script.sh.erb
@@ -1,12 +1,12 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce(is_vgl(context.global_queue_x86, context.global_gpus)) %>
 
 # Start VESTA
 <% if !context.global_input_file.to_s.empty? %>
-/opt/vesta/VESTA "<%= context.global_input_file %>" &
+${_VIRTUALGL} /opt/vesta/VESTA "<%= context.global_input_file %>" &
 <% else %>
-/opt/vesta/VESTA &
+${_VIRTUALGL} /opt/vesta/VESTA &
 <% end %>
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
