--- a/VisIt/template/script.sh.erb
+++ b/VisIt/template/script.sh.erb
@@ -1,5 +1,5 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce %>
 
 # Start VisIt
 <% if !context.global_input_file.to_s.empty? %>
@@ -9,4 +9,4 @@
 <% end %>
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
