--- a/XCrySDen/template/script.sh.erb
+++ b/XCrySDen/template/script.sh.erb
@@ -1,12 +1,12 @@
 # Set xfce environment and _VIRTUALGL
-<%= set_xfce(context.respond_to?(:gpus) && context.gpus.to_i > 0) %>
+<%= set_xfce(is_vgl(context.global_queue_x86, context.global_gpus)) %>
 
 # Start XCrySDen
 <% if context.file_format.to_s != "none" && !context.global_input_file.to_s.empty? %>
-/opt/xcrysden/bin/xcrysden "<%= context.file_format %>" "<%= context.global_input_file %>" &
+${_VIRTUALGL} /opt/xcrysden/bin/xcrysden "<%= context.file_format %>" "<%= context.global_input_file %>" &
 <% else %>
-/opt/xcrysden/bin/xcrysden &
+${_VIRTUALGL} /opt/xcrysden/bin/xcrysden &
 <% end %>
 
 # Start up xfce desktop (block until user logs out of desktop)
-${_VIRTUALGL} xfce4-session
+xfce4-session
