--- a/ttyd/template/script.sh.erb
+++ b/ttyd/template/script.sh.erb
@@ -15,6 +15,7 @@ cd "$HOME" || exit 7
 
 # set SINGULARITY_BINDPATH and _OPTION
 <%= set_bindpath %>
+export SINGULARITY_BINDPATH=${SINGULARITY_BINDPATH},/cloud_opt,/lvs0,/hs
 
 # select image
 if [ `arch` = "x86_64" ]; then
