--- a/ParaView/submit.yml.erb
+++ b/ParaView/submit.yml.erb
@@ -16,6 +16,7 @@ batch_connect:
 
     # Set SINGULARITY_BINDPATH and _OPTION
     <%= set_bindpath %>
+    export SINGULARITY_BINDPATH=${SINGULARITY_BINDPATH},/cloud_opt,/lvs0,/hs
 
     if [ `arch` = "x86_64" ]; then
       export SINGULARITYENV_XDG_DATA_HOME=<%= XDG_DATA_HOME["x86_64"] %>/<%= APP_NAME %>
