--- a/docs/style.css
+++ b/docs/style.css
@@ -55,9 +55,17 @@ h3 {
   margin: 1rem 0 0 1rem;
   font-weight: 600;
 }
+h4 {
+  font-size: 1.25rem;
+  color: black;
+  border-left: 8px solid black;
+  padding-left: 0.5rem;
+  margin: 1rem 0 0 1rem;
+  font-weight: 600;
+}
 p {
   padding-left: 1rem;
-  margin: 0.5rem 0;
+  margin: 0.6rem 0;
   text-align: justify;
 }
 img {
